# sharkdash

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ansi_banner.utf8  manpage.md  sharkdash.desktop
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: continuous-build-freebsd.yml  continuous-build-linux.yml  continuous-build-macos.yml  continuous-build-netbsd.yml  continuous-build-openbsd.yml
nexus/: README.md
nexus/dunst/: dunstrc
nexus/hypr/: hypridle.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf
nexus/kitty/: kitty.conf
nexus/rofi/: config.rasi  nexus.rasi
nexus/scripts/: install.sh  one-shot-recover.sh  recover.sh
nexus/wallpapers/: README.md
nexus/waybar/: config.jsonc  style.css
nyxus/: README.md
nyxus/eww/: CHANGES.md  README.md  _nyxus_accent.scss  accent.scss  cava.conf  deepcore.yuck  dock.yuck  eww.scss  eww.yuck  hotkey.yuck  hyprland-bars.conf.snippet  mission.yuck  nyxus.conf  osd-extra.yuck  quicksettings.yuck  snap.yuck  splash.yuck
nyxus/hypr/: hypridle.conf  hyprland.conf  hyprlock-accent.conf  hyprlock.conf  nyxus-monitors.conf  nyxus-palette.css
scripts/: rebrand.py
snap/: snapcraft.yaml
src/: main.cpp  sharkdash.cpp  sharkdash.hpp  sharkdash_cli.cpp  sharkdash_config.cpp  sharkdash_config.hpp  sharkdash_draw.cpp  sharkdash_draw.hpp  sharkdash_input.cpp  sharkdash_input.hpp  sharkdash_log.cpp  sharkdash_menu.cpp  sharkdash_menu.hpp  sharkdash_shared.cpp  sharkdash_theme.cpp  sharkdash_tools.cpp  sharkdash_tools.hpp
tests/: CMakeLists.txt  cpu_names.cpp  tools.cpp
themes/: shark.theme
(+90 files in other folders)
